--- a/code-with-quarkus-data-activerecord-reactive/src/main/resources/application.properties
+++ b/code-with-quarkus-data-activerecord-reactive/src/main/resources/application.properties
@@ -5,8 +5,8 @@ quarkus.datasource.devservices.enabled=false
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=quarkus
 quarkus.datasource.password=quarkus
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db
-
+#quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db
+quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost:5432/db
 #Hibernate configuration
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
